# TestSHC

./: CMakeLists.txt  README.md  TestSHC.cpp  TestSHC.h  TestSHC.hpp  tams_s2_rotate_fftw.cpp  tams_s2_rotate_fftw.h  tams_s2_semi_memo_for.cpp  tams_s2_semi_memo_for.h
s2kit/: CMakeLists.txt
s2rotate/: CMakeLists.txt  rotate_so3_utils.c
